Fixed broken scaling on mobile and added coming soon to other 2 recent work boxes

--- a/styles.css
+++ b/styles.css
@@ -69,6 +69,7 @@ nav ul li a:hover {
     height: 50%;
     margin-top: 0.75em;
     font-size: 0.9rem;
+    padding: 0 1.1em;
 }
 
 .heading-image {
@@ -144,7 +145,7 @@ p {
     border-radius: 10px;
     background-color: white;
     border: 1px solid rgba(100, 100, 100, 0.25);
-    width: 65vw;
+    width: 80vw;
     max-width: 1500px;
     height: auto;
     box-shadow: 0px 5px 30px rgba(100, 100, 100, 0.25);
@@ -210,7 +211,7 @@ h4 {
 
 .recent-work-container {
     width: 100%;
-    max-width: 2500px;
+    max-width: 2000px;
     height: 105em;
     padding: 0 5em;
     display: grid;
@@ -229,12 +230,10 @@ h4 {
     background-color: #7510F7;
     border: 1px solid white;
     border-radius: 20px;
-    display: flex;
-    justify-content: center;
-    align-items: center;
+    display: inline-block;
     width: 100%;
     height: 100%;
-    padding: 0 3em;
+    padding: 0 auto;
 }
 
 .recent-work-item a {
@@ -243,7 +242,7 @@ h4 {
     font-weight: 500;
     font-size: 2em;
     height: 100%;
-    width: 100%;
+    width: auto;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -292,7 +291,6 @@ h4 {
     }
 
     .table {
-        width: 80vw;
         flex-direction: row;
     }
 
